Fix contrast on delete icon for watch expression
This CL improves the contrast of the delete icon so it can be seen when
you over over the expression. It also tidies up the CSS; we had
min-width being used to add effectively margin to the right hand side so
I've removed that and increased the `right` property.

Fixed: 1248353
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3160009
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Paul Lewis <aerotwist@chromium.org>

--- a/front_end/panels/sources/watchExpressionsSidebarPane.css
+++ b/front_end/panels/sources/watchExpressionsSidebarPane.css
@@ -7,17 +7,12 @@
 .watch-expression-delete-button {
   position: absolute;
   top: 5px;
-  right: 6px;
+  right: 16px;
   cursor: pointer;
   opacity: 0%;
-  min-width: 20px;
 }
 
 .watch-expression-header:hover .watch-expression-delete-button {
-  opacity: 50%;
-}
-
-.watch-expression-header:hover .watch-expression-delete-button:hover {
   opacity: 100%;
 }
 
@@ -101,7 +96,7 @@ li.watch-expression-tree-item {
 }
 
 li.watch-expression-tree-item:hover {
-  background-color: var(--color-background-elevation-2);
+  background-color: var(--color-background-elevation-1);
 }
 
 .watch-expression-header:focus-visible {
